src/page/error/error-404/error-404-without-search/example/index.ejs
<%
const sample = getSample(include);
%>

<%- sample('', './sample/error-404-without-search', { contact: true }, true, '../../../example/layout'); %>
